# docker-sideways-bot

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TESTING.md  TODO.md  docker-compose.yml  pyproject.toml  test-compose.yml
.github/: CODEOWNERS
.github/workflows/: merge.yml  tag.yml
SourceCode/: aws_functions.py  bot_internals.py  coinbase_pro.py  gemini_exchange.py  sideways_bot.py
