[tool.poetry]
name = "sideways-bot"
version = "0.1.0"
description = "A bot that trades cryptocurrency sideways using a percentage difference from current price."
authors = ["Matthew Ahrenstein <matt@ahrenstein.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
boto3 = "^1.17.105"
requests = "^2.25.1"
pylint = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
